fixed alignment of div and fixed the team html

--- a/styles/pmfgStyle.css
+++ b/styles/pmfgStyle.css
@@ -21,16 +21,15 @@ header{
     border-bottom: #e8491d 3px solid;
 }
 header a{
-	font-family: Papyrus;
+	font-size: 16px;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 12px;
-	font-weight: bold;
-	text-shadow: 0.035in 0.06in 0.06944444444444in rgb( 0, 0, 0 );
+    font-weight: bold;
+    text-shadow: 0.035in 0.06in 0.06944444444444in rgb( 0, 0, 0 );
 }
 header li{
-	font-family: Papyrus;
+	font-family: Abril Fatface;
 	font-size: 12px;
     float: left;
     display: inline;
@@ -75,7 +74,7 @@ header a:hover{
     padding: 0;
 }
 .menu li {
-	font-family: Papyrus;
+	font-family: Abril Fatface;
 	text-align: center;
 	font-size: 20px;
     padding: 8px;
@@ -93,14 +92,14 @@ header a:hover{
 }
 
 h1{
-	font-family: Papyrus;
+	font-family: Abril Fatface;
 	font-weight: bold;
 	font-size: 50px;
 	margin: 0;
 }
 
 h2{
-    font-family: Papyrus;
+    font-family: Abril Fatface;
     font-weight: bold;
     font-size: 40px;
     margin: 0; 
@@ -110,14 +109,14 @@ pre{
 }
 
 h3{
-	font-family: Papyrus;
+	font-family: Abril Fatface;
 	font-weight: bold;
 	font-size: 25px;
 	margin: 0;	
 }
 
 h4{
-	font-family: Papyrus;
+	font-family: Abril Fatface;
 	font-weight: bold;
 	font-size: 20px;
 	margin: 0;	
