--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body{
     box-sizing:border-box;
-    font-family: Papyrus;
+    font-family: Abril Fatface;
     line-height: 1.5;
     padding: 0;
     margin: 0;
@@ -31,10 +31,12 @@ header{
     border-bottom: #e8491d 3px solid;
 }
 header a{
+	font-size: 16px;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 12px;
+    font-weight: bold;
+    text-shadow: 0.035in 0.06in 0.06944444444444in rgb( 0, 0, 0 );
 }
 header li{
     float: left;
@@ -75,6 +77,7 @@ footer {
 	padding: 0px;
 	background-color: #35424a;
 }
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 1000px;
@@ -82,6 +85,7 @@ max-height: 515px;
   position: relative;
   margin: auto;
 }
+
 /* Caption text */
 .text {
  color: rgb( 232, 73, 29 );
@@ -94,6 +98,7 @@ max-height: 515px;
     z-index: 1;
 	-webkit-text-stroke: 3px black;
 }
+
 /* The dots/bullets/indicators */
 .dot {
   height: 13px;
@@ -104,9 +109,11 @@ max-height: 515px;
   display: inline-block;
   transition: background-color 0.6s ease;
 }
+
 .active2 {
   background-color: #717171;
 }
+
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
@@ -114,10 +121,12 @@ max-height: 515px;
   animation-name: fade;
   animation-duration: 1.5s;
 }
+
 @-webkit-keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
 }
+
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
