--- a/styles/team.css
+++ b/styles/team.css
@@ -1,5 +1,5 @@
 body{
-	font-family: Papyrus;
+	font-family:  Abril Fatface;
     font-size: 15px;
     line-height: 1.5;
     padding: 0;
@@ -25,7 +25,7 @@ header{
     border-bottom: #e8491d 3px solid;
 }
 header a{
-	font-size: 12px;
+	font-size: 16px;
     color: #ffffff;
     text-decoration: none;
     text-transform: uppercase;
@@ -63,6 +63,14 @@ html {
   box-sizing: inherit;
 }
 
+
+h1 {
+	text-align: center;
+	display: inline-block;
+    border-bottom: 5px solid #e8491d;
+	font-size: 50px;
+}
+
 .column {
   float: left;
   width: 33.3%;
@@ -81,7 +89,7 @@ img.id{
 }
 
 .otherRow{
-	padding-left: 270px;
+	padding-left: 320px;
 }
 
 @media (max-width: 650px) {
